[package]
name = "boardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_vector_shapes = "0.7.0"
bevy_framepace = "0.15"
rand = "0.8.4"
tokio = { version = "1.37.0", features = ["full"] }
