[package]
name = "boardgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0" }
bevy_consumable_event = "0.3.0"
bevy_framepace = "0.15"
bevy_simplenet = { git = "https://github.com/UkoeHB/bevy_simplenet.git" }
bevy_vector_shapes = "0.7.0"
enfync = "0.1"
rand = "0.8.4"
serde = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }
url = { version = "2" }
