[package]
name = "boardgame_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_simplenet = { git = "https://github.com/needon1997/bevy_simplenet.git", default-features = false }
enfync = "0.1"
rand = "0.8.4"
serde = "1.0.202"
url = { version = "2" }

[features]
client = ["bevy_simplenet/client"]
server = ["bevy_simplenet/server"]

[target.'cfg(target_family = "wasm")'.dependencies]
web-time = "1.1.0"