[package]
name = "boardgame_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_simplenet = { git = "https://github.com/needon1997/bevy_simplenet.git", features = ["server"] }
rand = "0.8.4"
tokio = "1"
boardgame_common = { path = "../boardgame_common", features = ["server"] }